--- a/styles.css
+++ b/styles.css
@@ -222,7 +222,7 @@
 
 .container .card .content a {
   position: relative; 
-  padding: 1.28 3.21vh; 
+  padding: .2vh 2.2vh; 
   margin-top: 2.41vh; 
   background: #fff; 
   color: #000; 
